Updating the actual CV content.

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,9 @@
 
     == History ==
 
+    07/12/2012: Updated the packages to use the latest version of NodeJs. Included the package.json file so it's easier to include on clones.
+    Fixed a few issues that occured because of the upgrade such as a breaking change in expressjs. Updated the CV content itself.
+
     27/04/2012: I've recently added a more visual representation of myself, hopefully this will be the first
     step in making a more intuitive way of browsing my CV. The graph is an enhancement that's only visible
     on modern browsers that support Canvas. I have no requirement to support older browsers as I think the types
@@ -61,7 +64,7 @@
             <span>Date of birth</span>: <strong>{{ birthDate }}</strong><br />
             <span>Location</span>: <strong>{{ location }}</strong><br />
             <span>Contact</span>: <strong>{{ contactDetails }}</strong><br />
-            <span class="downloadable-formats"><span>Downloadable CV</span>: <a href="John_Harman_CV.pdf"><strong>PDF</strong></a></span>
+            <span class="downloadable-formats"><span>Downloadable CV</span>: <a href="John_Harman_CV_1.0.1.pdf"><strong>PDF</strong></a></span>
         </p>
         
         <ul>
